--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,86 @@
 /captures
 .externalNativeBuild
 .cxx
+README.md
+.idea/vcs.xml
+.idea/runConfigurations.xml
+.idea/misc.xml
+.idea/jarRepositories.xml
+.idea/intellij-javadocs-4.0.1.xml
+.idea/gradle.xml
+.idea/codeStyles/Project.xml
+.idea/codeStyles/codeStyleConfig.xml
+.idea/.name
+.idea/app/release/output.json
+.idea/app/build.gradle
+.idea/app/proguard-rules.pro
+.idea/app/src/main/AndroidManifest.xml
+.idea/app/src/main/ic_launcher-playstore.png
+.idea/app/src/main/java/com/ruqqienav/MainActivity.kt
+.idea/app/src/main/res/drawable-anydpi/side_nav_bar.xml
+.idea/app/src/main/res/drawable-xhdpi/head.png
+.idea/app/src/main/res/drawable/ic_chat.xml
+.idea/app/src/main/res/drawable/ic_code.xml
+.idea/app/src/main/res/drawable/ic_comments.xml
+.idea/app/src/main/res/drawable/ic_donate.xml
+.idea/app/src/main/res/drawable/ic_flat.xml
+.idea/app/src/main/res/drawable/ic_guild.xml
+.idea/app/src/main/res/drawable/ic_help.xml
+.idea/app/src/main/res/drawable/ic_home.xml
+.idea/app/src/main/res/drawable/ic_launcher_background.xml
+.idea/app/src/main/res/drawable/ic_mod.xml
+.idea/app/src/main/res/drawable/ic_new.xml
+.idea/app/src/main/res/drawable/ic_post.xml
+.idea/app/src/main/res/drawable/ic_rand.xml
+.idea/app/src/main/res/drawable/ic_refresh.xml
+.idea/app/src/main/res/drawable/ic_search.xml
+.idea/app/src/main/res/drawable/ic_settings.xml
+.idea/app/src/main/res/drawable/ic_split.xml
+.idea/app/src/main/res/drawable/ic_stop.xml
+.idea/app/src/main/res/drawable/ic_trending.xml
+.idea/app/src/main/res/drawable/ic_video.xml
+.idea/app/src/main/res/drawable/progress_states.xml
+.idea/app/src/main/res/drawable/ruqqie.png
+.idea/app/src/main/res/layout/activity_main.xml
+.idea/app/src/main/res/layout/content_main.xml
+.idea/app/src/main/res/layout/nav_header.xml
+.idea/app/src/main/res/menu-v26/nav_menu.xml
+.idea/app/src/main/res/menu/content_main.xml
+.idea/app/src/main/res/menu/nav_menu.xml
+.idea/app/src/main/res/mipmap-anydpi-v26/ic_launcher.xml
+.idea/app/src/main/res/mipmap-anydpi-v26/ic_launcher_round.xml
+.idea/app/src/main/res/mipmap-hdpi/ic_launcher.png
+.idea/app/src/main/res/mipmap-hdpi/ic_launcher_foreground.png
+.idea/app/src/main/res/mipmap-hdpi/ic_launcher_round.png
+.idea/app/src/main/res/mipmap-mdpi/ic_launcher.png
+.idea/app/src/main/res/mipmap-mdpi/ic_launcher_foreground.png
+.idea/app/src/main/res/mipmap-mdpi/ic_launcher_round.png
+.idea/app/src/main/res/mipmap-xhdpi/ic_launcher.png
+.idea/app/src/main/res/mipmap-xhdpi/ic_launcher_foreground.png
+.idea/app/src/main/res/mipmap-xhdpi/ic_launcher_round.png
+.idea/app/src/main/res/mipmap-xxhdpi/ic_launcher.png
+.idea/app/src/main/res/mipmap-xxhdpi/ic_launcher_foreground.png
+.idea/app/src/main/res/mipmap-xxhdpi/ic_launcher_round.png
+.idea/app/src/main/res/mipmap-xxxhdpi/ic_launcher.png
+.idea/app/src/main/res/mipmap-xxxhdpi/ic_launcher_foreground.png
+.idea/app/src/main/res/mipmap-xxxhdpi/ic_launcher_round.png
+.idea/app/src/main/res/values-v21/dimens.xml
+.idea/app/src/main/res/values-v21/strings.xml
+.idea/app/src/main/res/values-v21/styles.xml
+.idea/app/src/main/res/values/colors.xml
+.idea/app/src/main/res/values/strings.xml
+.idea/app/src/main/res/values/styles.xml
+.idea/build.gradle
+.idea/fastlane/metadata/android/en-US/full_description.txt
+.idea/fastlane/metadata/android/en-US/images/phonescreenshots/1.png
+.idea/fastlane/metadata/android/en-US/images/phonescreenshots/2.png
+.idea/fastlane/metadata/android/en-US/images/phonescreenshots/3.png
+.idea/fastlane/metadata/android/en-US/images/phonescreenshots/4.png
+.idea/fastlane/metadata/android/en-US/short_description.txt
+.idea/gradle.properties
+.idea/gradle/wrapper/gradle-wrapper.jar
+.idea/gradle/wrapper/gradle-wrapper.properties
+.idea/gradlew
+.idea/gradlew.bat
+.idea/LICENSE
+.idea/settings.gradle
